--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,12 @@
 
 /* Your CSS Code here. */
+.main{
+
+Width: 200px;
+background-color: purple;
+border-left-color: green;
+border-left-width: 5 pixels;
+padding: 10px;
+	
+}
+
