--- a/styles.css
+++ b/styles.css
@@ -5,8 +5,15 @@
 Width: 200px;
 background-color: purple;
 border-left-color: green;
-border-left-width: 5 pixels;
+border-left-width: 5px;
+	border-left-style:solid;
 padding: 10px;
+	
+}
+.heading{
+	font-size:20px;
+	color:white;
+	text-decoration:underline;
 	
 }
 
